// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.userpreferences.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/userpreferences/v1;userpreferencesv1";

// UnifiedResourcePreferences are preferences used in the Unified Resource web UI
message UnifiedResourcePreferences {
  // default_tab is the default tab selected in the unified resource web UI
  DefaultTab default_tab = 1;
  // view_mode is the view mode selected in the unified resource Web UI
  ViewMode view_mode = 2;
  // labels_view_mode is whether the labels for resources should all be collapsed or expanded in the unified resource Web UI list view.
  LabelsViewMode labels_view_mode = 3;
  // available_resource_mode specifies which option in the availability filter menu the user has selected, if any
  AvailableResourceMode available_resource_mode = 4;
}

// DefaultTab is the default tab selected in the unified resource web UI
enum DefaultTab {
  DEFAULT_TAB_UNSPECIFIED = 0;
  // ALL is all resources
  DEFAULT_TAB_ALL = 1;
  // PINNED is only pinned resources
  DEFAULT_TAB_PINNED = 2;
}

// ViewMode is the view mode selected in the unified resource Web UI
enum ViewMode {
  VIEW_MODE_UNSPECIFIED = 0;
  // CARD is the card view
  VIEW_MODE_CARD = 1;
  // LIST is the list view
  VIEW_MODE_LIST = 2;
}

/** LabelsViewMode is whether the labels for resources should all be collapsed or expanded. This only applies to the list view. */
enum LabelsViewMode {
  LABELS_VIEW_MODE_UNSPECIFIED = 0;
  // EXPANDED is the expanded state which shows all labels for every resource.
  LABELS_VIEW_MODE_EXPANDED = 1;
  // COLLAPSED is the collapsed state which hides all labels for every resource.
  LABELS_VIEW_MODE_COLLAPSED = 2;
}

/** AvailableResourceMode specifies which option in the availability filter menu the user has selected, if any */
enum AvailableResourceMode {
  AVAILABLE_RESOURCE_MODE_UNSPECIFIED = 0;
  AVAILABLE_RESOURCE_MODE_ALL = 1;
  AVAILABLE_RESOURCE_MODE_ACCESSIBLE = 2;
  AVAILABLE_RESOURCE_MODE_REQUESTABLE = 3;
  AVAILABLE_RESOURCE_MODE_NONE = 4;
}
